DOC-1860: 6.4.1-release-notes.adoc
Typo correction. Also removed a now-un-necessary note-to-self.

--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -19,10 +19,10 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 * xref:additions[Additions]
 * xref:changes[Changes]
 * xref:bug-fixes[Bug fixes]
-* xref:known-issues[Known issues] -- leave until closer to 2023-03-15 and remove or make visible as appropriate.
+* xref:known-issues[Known issues]
 // NB: edit the equivalent section of nav.adoc when the remove or make visible decision is made.
 
-NOTE: Although there was a Community release of {productname} 6.4, it was not released as an {enterpriseversion} or {cloudname} release. The first commercially supported release of {productname} post version 6.3.2 is {productname} 6.4.1.
+NOTE: Although there was a Community release of {productname} 6.4, it was not released as a {enterpriseversion} or {cloudname} release. The first commercially supported release of {productname} post version 6.3.2 is {productname} 6.4.1.
 
 [[new-premium-plugin]]
 == New Premium Plugin
