--- a/modules/ROOT/partials/toolbar-button-ids/advtemplate-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/advtemplate-toolbar-buttons.adoc
@@ -2,5 +2,5 @@
 |===
 |Toolbar button identifier |Description
 |`+inserttemplate+` |Opens the Templates dialog which presents all templates available to the particular {productname} instance for selection and insertion.
-|`+addtemplate+` |Open the New template dialog, allowing for the selected text to saved as a named template and placed in an already-set category. If there is no selection current in the {productname} editor, this button is disabled.
+|`+addtemplate+` |Open the New template dialog, allowing for the selected text to be saved as a named template and placed in an already-set category. If there is no selection current in the {productname} editor, this button is disabled.
 |===
